--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <h1>Store Inventory</h1>
-  <table>
+  <table id="items">
     <thead>
       <tr>
         <th>Item name</th>
@@ -22,8 +22,8 @@
     </thead>
     <tbody></tbody>
   </table>
-  <form>
-    <button type="button" onclick="updateButton()">Update Items</button>
+  <form class="form">
+    <button id="update-items-button">Update Items</button>
   </form>
 </body>
 
