--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css" type='text/css' media='screen'>
-  <script type="module" src="index.js"></script>
+  <script defer src="index.js"></script>
   <title>Store Inventory</title>
 </head>
 
 <body>
   <h1>Store Inventory</h1>
-  <table id="items">
+  <table>
     <thead>
       <tr>
         <th>Item name</th>
@@ -22,8 +22,8 @@
     </thead>
     <tbody></tbody>
   </table>
-  <form class="form">
-    <button id="update-items-button">Update Items</button>
+  <form>
+    <button>Update Items</button>
   </form>
 </body>
 
