make some changes

--- a/index.html
+++ b/index.html
@@ -22,8 +22,17 @@
     </thead>
     <tbody></tbody>
   </table>
-  <form>
-    <button>Update Items</button>
+  <form class="list">
+    <label for ="item">Enter Item Name</label>
+    <input type="text" name="item">
+    <label for="sell_in">Sell in Days</label>
+    <input type="number" name="sell-in">
+    <label for="quality">Quality</label>
+    <input type="number" name="quality">
+    <button type="submit">Submit</button>
+  </form>
+  <form class="update">
+    <button type="sumbit">Update Items</button>
   </form>
 </body>
 
